<resources>
    <string name="app_name">tests</string>
    <string name="add">Add</string>
    <string name="hint">Hint</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_enter_test">Вы хотите начать тест?</string>
    <string name="yes">Да</string>
    <string name="go_back">Назад</string>
    <string name="stringYourMark">Ваша оценка:</string>
    <string name="stringTotalTasksCount">Всего вопросов: %s</string>
    <string name="stringRightAnswers">Правильных ответов: %s</string>
    <string name="string_type_password">Введите пароль</string>
    <string name="string_password">Пароль</string>
    <string name="string_password_not_written">Введите пароль</string>
    <string name="string_password_incorrect">Неверный пароль</string>
    <string name="string_time_format">%02d:%02d</string>
    <string name="string_create_test">Создать тест</string>
    <string name="string_enter_test">Войти в тест</string>
    <string name="string_main_text">Создавайте и делитесь тестами с людьми\nиз любой точки мира!</string>
    <string name="string_test_creation">Создание теста</string>
    <string name="string_current_tests">Текущие тесты</string>
    <string name="string_test_name">Имя теста</string>
    <string name="string_subject">Предмет</string>
    <string name="completeTime">Время выполнения</string>
    <string name="string_continue">Продолжить</string>
    <string name="string_cannot_connect">Не удалось соединиться с сервером</string>
    <string name="string_limit_symbols">Превышено количество символов</string>
    <string name="string_empty">Заполните пустое поле</string>
    <string name="string_empty_name">Введите имя для теста</string>
    <string name="string_empty_completeTime">Введите время выполнения</string>
    <string name="string_empty_subject">Введите категорию теста</string>
    <string name="stringAdd">+</string>
    <string name="stringTask">Вопрос</string>
    <string name="stringVariant">Вариант</string>
    <string name="stringVariantsLimit">Превышено количество вариантов</string>
    <string name="stringMinus">-</string>
    <string name="string_tasks_create">Создание заданий</string>
    <string name="stringAddTask">Добавить вопрос\n</string>
    <string name="stringContinue">Далее</string>
    <string name="string_limit_tasks">Превышен лимит заданий</string>
    <string name="stringTaskNoText">У задания отсутствует текст</string>
    <string name="stringVariantNotText">У варианта отсуствует текст</string>
    <string name="stringTaskNoRightVariant">Не выбран правильный вариант</string>
    <string name="stringName">Имя</string>
    <string name="stringStart">Начать</string>
    <string name="stringCreate">Создать</string>
    <string name="stringTasksCount">Количество заданий</string>
    <string name="stringCompleteTime">Время выполнения</string>
    <string name="stringDirection">Направление</string>
    <string name="findtest">FindTest</string>
    <string name="stringTypeTestId">Введите id теста</string>
    <string name="stringId">id</string>
    <string name="stringEnter">Войти</string>
    <string name="stringTestExit">Вы покинули тест</string>
</resources>