<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorWhite"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringTypeTestId"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/etTestId"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/stringId"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@id/btnNo"
            app:layout_constraintStart_toStartOf="@id/btnEnterTest"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEnterTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringEnter"
            app:layout_constraintEnd_toStartOf="@id/btnNo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etTestId" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnEnterTest"
            app:layout_constraintTop_toBottomOf="@id/etTestId" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>