<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".presentation.testCreate.TestCreateActivity">

    <ImageView
        android:id="@+id/ivBackArrow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/string_test_creation"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivBackArrow"
        app:layout_constraintStart_toEndOf="@id/ivBackArrow"
        app:layout_constraintTop_toTopOf="@id/ivBackArrow" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/testNameIl"
        style="@style/TextInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:counterTextColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBackArrow">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/testNameEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/string_test_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/subjectIl"
        style="@style/TextInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:counterTextColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/testNameIl">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/testSubjectEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/string_subject"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/completeTimeIl"
        style="@style/TextInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="3"
        app:counterTextColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjectIl">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/completeTimeEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/completeTime"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:lines="1"
            android:maxLength="3"
            android:maxLines="1"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/createPasswordIl"
        style="@style/TextInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="3"
        app:counterTextColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/completeTimeIl">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/string_password"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:lines="1"
            android:maxLength="3"
            android:maxLines="1"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/testCreateContinue"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:text="@string/string_continue"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createPasswordIl" />

</androidx.constraintlayout.widget.ConstraintLayout>